--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <img src="image.png"></img>
     <p>this is a test website. There's nothing here yet. Come back later.</p>
 </body>
 
