added a link to cosmobrain.itch.io

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <img src="image.png"></img>
-    <p>this is a test website. There's nothing here yet. Come back later.</p>
+    <p>this is a test website. There's nothing here yet. Come back later. You can have a look at <a href="https://cosmobrain.itch.io" target="blank"> my itch page</a>.</p>
 </body>
 
 </html>
