--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,6 @@
   <body>
     <canvas id="canvas" width="400" height="400"></canvas>
     <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
-    <script src="./bootstrap.js"></script>
+    <script src="./../pkg" type="module"></script>
   </body>
 </html>
