--- a/www/index.html
+++ b/www/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Hello wasm-pack!</title>
+    <base href="./">
     <style>
       * {
         margin: 0px;
@@ -18,6 +19,6 @@
   <body>
     <canvas id="canvas" width="400" height="400"></canvas>
     <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
-    <script src="cosmobrain0.github.io/pkg/" type="module"></script>
+    <script src="./bootstrap.js"></script>
   </body>
 </html>
