--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,6 @@
   <body>
     <canvas id="canvas" width="400" height="400"></canvas>
     <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
-    <script src="./bootstrap.js"></script>
+    <script src="./www/bootstrap.js"></script>
   </body>
 </html>
