--- a/static/index.html
+++ b/static/index.html
@@ -17,6 +17,6 @@
   </head>
   <body>
     <canvas id="canvas" width=500 height=500></width>
-    <script src="..\js\index.js"></script>
+    <script src="..\js\index.js" type="text/javascript"></script>
   </body>
 </html>
