--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <base href="./">
     <meta charset="UTF-8">
     <title>My Rust + Webpack project!</title>
     <style>
@@ -17,6 +18,6 @@
   </head>
   <body>
     <canvas id="canvas" width=500 height=500></width>
-    <script src="..\js\index.js" type="text/javascript"></script>
+    <script src="js\index.js" type="text/javascript"></script>
   </body>
 </html>
